Ajustes finais dos cruds após testes e configuração docker